fixed small tweaks by decreasing auto rows px, grid gap for rows as 0 , and refactoring span size

--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,11 +1,13 @@
-/* ImageList.css */
-
-.image-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
-}
-
-.image-list img {
-    width: 250px;
-}
+    /* ImageList.css */
+    
+    .image-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        /* put 0 px between each row */
+        grid-gap: 0 10px;
+        grid-auto-rows: 10px;
+    }
+    
+    .image-list img {
+        width: 250px;
+    }
